seedboxk8s/applications/ersatztv/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ersatztv
  namespace: tortuga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ersatztv
  template:
    metadata:
      labels:
        app: ersatztv
    spec:
      containers:
        - image: jasongdove/ersatztv:develop
          name: ersatztv
          ports:
            - containerPort: 8409
          volumeMounts:
            - mountPath: /config
              name: ersatztv-config-pvc
              readOnly: false
            - mountPath: /media
              name: seedboxmedia-nfs
              readOnly: true
            - mountPath: /dev/dri
              name: dev-dri
              readOnly: false
      volumes:
        - name: import
          emptyDir: {}
        - name: ersatztv-config-pvc
          persistentVolumeClaim:
            claimName: ersatztv-config-pvc
        - name: seedboxmedia-nfs
          persistentVolumeClaim:
            claimName: seedboxmedia-nfs-pvc
        - name: dev-dri
          hostPath:
            path: /dev/dri
            type: Directory
