seedboxk8s/applications/ersatztv/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ersatztv
  namespace: tortuga
spec:
  replicas: 1
  serviceName: ersatztv
  selector:
    matchLabels:
      app.kubernetes.io/name: ersatztv
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ersatztv
    spec:
      securityContext:
        fsGroup: ${plexGid}
      containers:
        - image: ghcr.io/ersatztv/legacy:develop@sha256:236e99756f5474babdcd4bd5509fd59039328b3f63e2a853e8d11e8c3ce61af8
          name: ersatztv
          ports:
            - containerPort: 8409
          securityContext:
            runAsUser: ${plexUid}
            runAsGroup: ${plexGid}
          volumeMounts:
            - mountPath: /config
              name: ersatztv-config-pvc
              readOnly: false
            - mountPath: /media
              name: seedboxmedia-nfs
              readOnly: true
            - mountPath: /dev/dri
              name: dev-dri
              readOnly: false
      volumes:
        - name: import
          emptyDir: {}
        - name: ersatztv-config-pvc
          persistentVolumeClaim:
            claimName: ersatztv-config-pvc
        - name: seedboxmedia-nfs
          persistentVolumeClaim:
            claimName: seedboxmedia-nfs-pvc
        - name: dev-dri
          hostPath:
            path: /dev/dri
            type: Directory
