seedboxk8s/applications/ersatztv/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ersatztv
  namespace: tortuga
spec:
  selector:
    app.kubernetes.io/name: ersatztv
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8409
