seedboxk8s/applications/ersatztv/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ersatztv
  namespace: tortuga
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: ErsatzTV
    gethomepage.dev/group: Media
    gethomepage.dev/icon: ersatztv
    gethomepage.dev/href: https://ersatztv.${productionClusterFqdn}

spec:
  ingressClassName: traefik-tailscale
  entryPoints:
    - websecure
  routes:
    - match: Host(`ersatztv.${productionClusterFqdn}`)
      kind: Rule
      services:
        - name: ersatztv
          kind: Service
          port: 80
      middlewares:
        - name: authelia
          namespace: authelia
  tls:
    secretName: seedbox-wildcard-backing-secret
